@@ -10,96 +10,31 @@
 ''
 '' --------------------------------------------------------
 
-dim shared gQuit as integer = 0
-
-''
-'' Load a text file from disk as a string
-''
-function LoadFileAsString( byref filename as string ) as string
-
-	dim x as string
-
-	if( open( filename for input access read as #1 ) = 0 ) then
-		close #1
-		if( open( filename for binary access read as #1 ) = 0 ) then
-			x = space( lof( 1 ))
-			get #1,,x
-			close #1
-		else
-			print "Unable to open '" & filename & "'"
-		end if 
-	else
-		print "File not found '" & filename & "'"
-	end if
-
-	function = x
-
-end function
+dim shared gQuit as boolean = false
 
 '' --------------------------------------------------------
 
 #include once "lisp_runtime.bi"
 
-'' --------------------------------------------------------
-'' (load <filename>)
-''
-define_lisp_function( load, args )
-
-	dim filename as string, text as string
-	
-	_OBJ(p1) = _EVAL(_CAR(args))	'' filename
-
-	if( _IS_STRING( p1 ) ) then
-		
-		filename = *p1->value.str
-
-		text = LoadFileAsString( "./lisp/" & filename & ".lsp" )
-
-		if( text > "" ) then
-			function = ctx->evaluator.eval( text )
-		else
-			'' FIXME: raise user defined error
-			function = _NIL_
-		end if
-
-	else
-		_RAISEERROR( LISP_ERR_ARGUMENT_TYPE_MISMATCH )
-		function = _NIL_
-
-	end if
-
-end_lisp_function()
+namespace LISP
 
 '' --------------------------------------------------------
 '' (quit)
 ''
 define_lisp_function( quit, args )
 
-	dim filename as string, text as string
-	
-	_OBJ(p1) = _EVAL(_CAR(args))	'' filename
-
-	if( _IS_STRING( p1 ) ) then
-		
-		filename = *p1.value.str
-
-		text = 
-
-
-
-		res = _NEW(OBJECT_TYPE_REAL)
-		res->value.flt = sqr( ( *p3 - *p1 ) ^ 2 + ( *p4 - *p2 ) ^ 2 )
-
-		function = ctx->evaluator( text )
-
-	else
-		_RAISEERROR( LISP_ERR_ARGUMENT_TYPE_MISMATCH )
+	if( _LENGTH(args) <> 0 ) then
+		_RAISEERROR( LISP_ERR_WRONG_NUMBER_OF_ARGUMENTS )
 		function = _NIL_
-
+	else
+		gQuit = true
 	end if
+
+	function = _T_
 
 end_lisp_function()
 
+end namespace
 
 '' --------------------------------------------------------
 '' MAIN
@@ -107,9 +42,10 @@ end_lisp_function()
 
 #include once "lisp.bi"
 
+using LISP
 dim lsp as LispModule
+dim result as LISP_ERROR
 
-BIND_FUNC( lsp.functions, "load", load )
 BIND_FUNC( lsp.functions, "quit", quit )
 
 print "LISP DEMO"
@@ -117,7 +53,7 @@ print "---------"
 print
 print "Enter LISP expressions at the prompt."
 print
-print "To exit type 'quit'."
+print "To exit type '(quit)'"
 print
 
 dim expr as string
@@ -132,15 +68,14 @@ do
 	elseif( trim(expr) > "" ) then
 
 		'' pass the LISP code to the evaluator
-		result = lsp.Eval( code )
+		result = lsp.Eval( expr )
 
 		'' check for an error
 		if( result <> LISP_ERR_SUCCESS ) then
-			print "Error " & lsp.ErrorCode & " on line " & lsp.ErrorLine & " of '" & filename & "'"
+			print "Error " & lsp.ErrorCode
 			print "  " & lsp.ErrorText
-			exit while
 		end if
 
 	end if
 
-loop while gQuit = 0
+loop while gQuit = false
