@@ -6,7 +6,7 @@ ifdef DEBUG
 FBCFLAGS += -g -d DEBUG -w pedantic -exx
 endif
 
-all : hello.exe bindfunc.exe runlisp.exe printout.exe
+all : hello.exe bindfunc.exe runlisp.exe printout.exe lispdemo.exe $(LIB)
 
 bindfunc.exe : bindfunc.bas $(LIB)
 	$(FBC) $(FBCFLAGS) bindfunc.bas -i ../src -i ../inc -p ../lib 
@@ -20,7 +20,12 @@ hello.exe : hello.bas $(LIB)
 printout.exe : printout.bas $(LIB)
 	$(FBC) $(FBCFLAGS) printout.bas -i ../src -i ../inc -p ../lib
 
+lispdemo.exe : lispdemo.bas $(LIB)
+	$(FBC) $(FBCFLAGS) lispdemo.bas -i ../src -i ../inc -p ../lib
+
+$(LIB) :
+	cd .. && make DEBUG=1
 
 .PHONY : clean
 clean:
-	rm -f hello.exe bindfunc.exe runlisp.exe printout.exe
+	rm -f hello.exe bindfunc.exe runlisp.exe printout.exe lispdemo.exe
