@@ -3,6 +3,8 @@ Nov 2017
 - Updated copyright notice for 2017
 - added (lineno) function to expose current lexer line number
 - fixed (+1 ...) and (-1 ...) functions were pointing to wrong function
+- changed: examples/runlisp.bas has new command line options
+- added: examples/lispdemo.bas (WIP)
 
 Mar 2015
 --------
